JECC - MXComboBox - added StringConverter